RESOLVED FIXED300460
[iOS] Safari crashes underneath `-[UIPreviewTarget initWithContainer:center:transform:]`
https://bugs.webkit.org/show_bug.cgi?id=300460
Summary [iOS] Safari crashes underneath `-[UIPreviewTarget initWithContainer:center:t...
Aditya Keerthi
Reported 2025-10-09 12:53:58 PDT
Attachments
Aditya Keerthi
Comment 1 2025-10-09 13:09:33 PDT
EWS
Comment 2 2025-10-10 00:30:20 PDT
Committed 301302@main (418cd9192a51): <https://commits.webkit.org/301302@main> Reviewed commits have been landed. Closing PR #52080 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.